# particle-physics-sim

./: .gitignore  CMakeLists.txt  README.md  run.bat
shaders/: particle.frag  particle.vert
src/: input_handler.cpp  input_handler.h  main.cpp  particle.h  particle_system.cpp  particle_system.h  renderer.cpp  renderer.h  shader_utils.cpp  shader_utils.h  spatial_grid.cpp  spatial_grid.h
tests/: test_particle_system.cpp
